Closed
Bug 393330
Opened 17 years ago
Closed 17 years ago
[FIX]"###!!! ASSERTION: comparing iterators over different lists" with large -moz-column-count and more
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla1.9beta2
People
(Reporter: jruderman, Assigned: bzbarsky)
References
Details
(Keywords: assertion, testcase)
Attachments
(2 files)
272 bytes,
text/html
|
Details | |
7.24 KB,
patch
|
roc
:
review+
roc
:
superreview+
mtschrep
:
approval1.9+
|
Details | Diff | Splinter Review |
###!!! ASSERTION: comparing iterators over different lists: 'mListLink == aOther.mListLink', file /Users/jruderman/trunk/mozilla/layout/generic/nsLineBox.h, line 684
Reporter | ||
Updated•17 years ago
|
Attachment #277824 -
Attachment mime type: text/plain → text/html
Comment 1•17 years ago
|
||
This assertion doesn't indicate anything important... I'll try and take a look at some point, though.
Severity: normal → minor
Reporter | ||
Comment 2•17 years ago
|
||
Does it indicate the presence of a bug? If not, it should be a warning or go away.
Comment 3•17 years ago
|
||
Well, yes, I think it does. Not completely sure, though.
It's probably indicating a bug in the line iterator code I just checked in to BuildTextRuns in nsTextFrameThebes.cpp.
Comment 5•17 years ago
|
||
No, it's asserting in nsBlockFrame::GetPrefWidth, which is my code.
Assignee | ||
Comment 6•17 years ago
|
||
It's asserting in both, actually. At least with a testcase over here. ;)
Assignee | ||
Comment 7•17 years ago
|
||
Also fixes a bug with text-decoration in split blocks.
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #288443 -
Flags: superreview?(roc)
Attachment #288443 -
Flags: review?(roc)
Assignee | ||
Updated•17 years ago
|
OS: Mac OS X → All
Hardware: PC → All
Summary: "###!!! ASSERTION: comparing iterators over different lists" with large -moz-column-count and more → [FIX]"###!!! ASSERTION: comparing iterators over different lists" with large -moz-column-count and more
Target Milestone: --- → mozilla1.9 M10
Attachment #288443 -
Flags: superreview?(roc)
Attachment #288443 -
Flags: superreview+
Attachment #288443 -
Flags: review?(roc)
Attachment #288443 -
Flags: review+
Attachment #288443 -
Flags: approval1.9+
Comment on attachment 288443 [details] [diff] [review]
Fix
well, I suppose end-game drivers should inspect this one
Attachment #288443 -
Flags: approval1.9+ → approval1.9?
Assignee | ||
Updated•17 years ago
|
Attachment #288443 -
Flags: approval1.9?
Assignee | ||
Updated•17 years ago
|
Attachment #288443 -
Flags: approval1.9?
Updated•17 years ago
|
Attachment #288443 -
Flags: approval1.9? → approval1.9+
Assignee | ||
Comment 9•17 years ago
|
||
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•