Don't compare lines from different blockframes' lists to each other.  Also fix handling of text-decorations in in-flows of blocks with text-indent.  Bug 393330, r+sr=roc, a=schrep